# file-host

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.yml
.github/workflows/: deploy.bash
src/: main.rs
templates/: manage.hbs
