[package]
name = "file-host"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
maplit = "1.0.2"
humansize = "1.1.0"
rand = "0.7.3"
rocket = "0.4.4"
rocket-multipart-form-data = "0.9.2"
once_cell = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve", "handlebars_templates"]

[profile.release]
lto = true
codegen-units = 1
incremental = false
